tests/fail_compile/derive_union.rs
use propagate::Propagate;

#[derive(Propagate)]
union MyUnion { my_field: () }

fn main() {}
